# FlexFlow

./: .editorconfig  .gitignore  .gitmodules  .proj.toml  .vimrc  CMakeLists.txt  CONTRIBUTING.md  README.md  cmake.sh  codecov.yml  env.sh  ffcompile.sh  flake.nix  job2gpu_big  run.sh
lib/kernels/: CMakeLists.txt
lib/kernels/benchmark/: CMakeLists.txt
lib/kernels/include/kernels/: accessor.h  allocation.h  array_shape.h  array_shape.struct.toml  attention_kernels.h  batch_matmul_kernels.h  batch_norm_kernels.h  batch_norm_per_device_state.struct.toml  cast_kernels.h  cast_kernels_cpu.h  combine_kernels.h  concat_kernels.h  conv_2d_kernels.h  conv_2d_per_device_state.struct.toml  copy_tensor_accessor.h  datatype_dispatch.h  dropout_kernels.h  dropout_per_device_state.struct.toml  element_binary_kernels.h  element_binary_per_device_state.struct.toml  element_unary_kernels.h  element_unary_per_device_state.struct.toml  embedding_kernels.h  ff_handle.h  flat_kernels.h  gather_kernels.h  gather_per_device_state.struct.toml  layer_norm_kernels.h  layer_norm_per_device_state.struct.toml  legion_dim.h  legion_dim_t.struct.toml  linear_kernels.h  local_cpu_allocator.h  (+28 more)
lib/kernels/raw/: CMakeLists.txt
lib/kernels/src/: accessor.cc  allocation.cc  array_shape.cc  copy_tensor_accessor.cc  device.cc  device.h  legion_dim.cc  local_cpu_allocator.cc  local_cuda_allocator.cc  managed_ff_stream.cc  managed_per_device_ff_handle.cc  perf_metrics.cc
lib/kernels/test/: CMakeLists.txt  modify_test_commands.cmake
lib/utils/test/: CMakeLists.txt
lib/utils/utils/: CMakeLists.txt
(+1350 files in other folders)
